load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["dynudns.go"],
    importpath = "github.com/jetstack/cert-manager/pkg/issuer/acme/dns/dynudns",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/issuer/acme/dns/util:go_default_library",
        "//vendor/golang.org/x/oauth2/clientcredentials:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["dynudns_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/issuer/acme/dns/util:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
